<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="410dp"
        android:layout_height="37dp"
        android:background="#C7C7DF"
        android:backgroundTint="#C7C7DF"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="NavTime"
        android:textColor="#040404"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/irTelaNavegacao"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#C7C7DF"
            android:onClick="irTelaNavegacao"
            android:text="@string/irTelaNavegacao"
            android:textColor="#040404" />

        <Button
            android:id="@+id/verRelatorio"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#C7C7DF"
            android:onClick="verRelatorio"
            android:text="@string/verRelatorio"
            android:textColor="#040404" />

        <Button
            android:id="@+id/reset"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#C7C7DF"
            android:onClick="sairApp"
            android:text="@string/sair"
            android:textColor="#040404"
            android:textColorLink="#00008B" />

        <TextView
            android:id="@+id/horaData"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="#00008B"
            android:backgroundTint="#C7C7DF"
            android:gravity="center|center_horizontal|center_vertical"
            android:textColor="#040404"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>